# tabular-ssl

./: .gitignore  404.html  ARCHITECTURE_DIAGRAMS.md  CONFIG_ALIGNMENT_SUMMARY.md  DESIGN_SIMPLIFICATION.md  DESIGN_SUMMARY.md  README.md  config_to_class_mapping_demo.py  custom_loss_demo.py  demo_corruption_interface.py  demo_corruption_strategies.py  demo_credit_card_data.py  demo_enhanced_optimizers.py  demo_final_design.py  demo_unified_corruption.py  extensibility_demo.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements.txt  simple_loss_demo.py  simple_unified_test.py  simplified_design_summary.md  ssl_training_step_simplification.md  tabular_ssl_model_flow_diagram.md  test_loss_function_consistency.py  test_simple_losses.py  test_simplified_design.py  unified_loss_demo.py
.github/workflows/: mkdocs.yml
configs/: README.md  config.yaml  simplified_config.yaml
configs/callbacks/: default.yaml
configs/corruption/: gaussian_noise.yaml  random_masking.yaml  recontab.yaml  scarf.yaml  swapping.yaml  vime.yaml
configs/data/: credit_card.yaml  default.yaml  generate.yaml  simple.yaml
configs/embedding/: categorical.yaml  null.yaml
configs/event_encoder/: autoencoder.yaml  contrastive.yaml  mlp.yaml
configs/experiment/: compare_corruptions.yaml  custom_mixup_ssl.yaml  quick_vime_ssl.yaml  recontab_ssl.yaml  s4_sequence.yaml  scarf_ssl.yaml  simple_loss_examples.yaml  simplified_vime.yaml  vime_ssl.yaml
configs/experiments/: credit_card_demo.yaml  recontab_ssl.yaml  (+6 more)
docs/: README.md  index.md  requirements.txt
explanation/: index.html
how-to-guides/: index.html
reference/: index.html
search/: search_index.json
src/: generate_data.py  train.py
tabular_ssl/: cli.py
tutorials/: index.html
(+99 files in other folders)
