[project]
name = "tabular-ssl"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "torch>=2.7.0",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocstrings[python]>=0.29.1",
    "mkdocstrings-python>=1.16.10",
    "pytest>=8.3.5",
    "ruff>=0.11.11",
]
